<resources>
    <string name="app_name">Transpose</string>
    <string name ="music_key">Key:</string>
    <string name ="cmbutton">CM/am</string>
    <string name="notes">Notes:</string>
    <string name="notesrestsBT">Switch Notes/Rests</string>
    <string name="accidentalsTV">Accidentals</string>
    <string name="BPMTV">BPM:</string>
    <string name="BPMET">120</string>
    <string name="beatspermeasureTV">Beats Per Measure:</string>
    <string name="beatspermeasureET">4</string>
    <string name ="playBT">PLAY</string>
    <string name ="pagesTV">Page : 1</string>
    <string-array name="spinnerItems">
        <item>CM_am</item>
        <item>GM_em</item>
        <item>DM_bm</item>
        <item>AM_fsm</item>
        <item>EM_csm</item>
        <item>BM_gsm</item>
        <item>FsM_dsm</item>
        <item>CsM</item>
        <item>Cbm</item>
        <item>Gbm_ebm</item>
        <item>DbM_bbm</item>
        <item>AbM_fm</item>
        <item>EbM_cm</item>
        <item>BbM_gm</item>
        <item>FM_dm</item>
    </string-array>
</resources>