<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/notesTV"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/notes"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keyTV" />

    <ImageView
        android:id="@+id/staffIV"
        android:layout_width="413dp"
        android:layout_height="209dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/staff" />

    <TextView
        android:id="@+id/keyTV"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:text="@string/music_key"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/staffIV" />

    <ImageButton
        android:id="@+id/wholenoteIB"
        android:layout_width="65dp"
        android:layout_height="130dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/halfnoteIB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notesTV"
        app:srcCompat="@drawable/wholenote" />

    <ImageButton
        android:id="@+id/halfnoteIB"
        android:layout_width="65dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        app:layout_constraintStart_toEndOf="@+id/wholenoteIB"
        app:layout_constraintTop_toBottomOf="@+id/notesTV"
        app:srcCompat="@drawable/halfnote" />

    <ImageButton
        android:id="@+id/quarternoteIB"
        android:layout_width="65dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/halfnoteIB"
        app:layout_constraintTop_toBottomOf="@+id/notesTV"
        app:srcCompat="@drawable/quarternote" />

    <ImageButton
        android:id="@+id/eighthnoteIB"
        android:layout_width="65dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="103dp"
        app:layout_constraintStart_toEndOf="@+id/quarternoteIB"
        app:layout_constraintTop_toBottomOf="@+id/staffIV"
        app:srcCompat="@drawable/eighthnote" />

    <ImageButton
        android:id="@+id/sixteenthnoteIB"
        android:layout_width="65dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/eighthnoteIB"
        app:layout_constraintTop_toBottomOf="@+id/staffIV"
        app:srcCompat="@drawable/sixteenthnote" />

    <Button
        android:id="@+id/notesrestsBT"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:text="@string/notesrestsBT"
        app:layout_constraintStart_toEndOf="@+id/notesTV"
        app:layout_constraintTop_toBottomOf="@+id/keyTV" />

    <TextView
        android:id="@+id/accidentalsTV"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="139dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="140dp"
        android:text="@string/accidentalsTV"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/halfnoteIB" />

    <ImageButton
        android:id="@+id/sharpIB"
        android:layout_width="80dp"
        android:layout_height="115dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wholenoteIB"
        app:srcCompat="@drawable/sharpaccidental" />

    <ImageButton
        android:id="@+id/natrualIB"
        android:layout_width="80dp"
        android:layout_height="115dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/sharpIB"
        app:layout_constraintTop_toBottomOf="@+id/accidentalsTV"
        app:srcCompat="@drawable/naturalaccidental" />

    <ImageButton
        android:id="@+id/flatIB"
        android:layout_width="80dp"
        android:layout_height="115dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eighthnoteIB"
        app:srcCompat="@drawable/flataccidental" />

    <TextView
        android:id="@+id/BPMTV"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/BPMTV"
        android:textColor="@color/black"

        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sharpIB" />

    <EditText
        android:id="@+id/BPMET"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/BPMET"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/BPMTV"
        app:layout_constraintTop_toBottomOf="@+id/sharpIB" />

    <TextView
        android:id="@+id/beatspermeasureTV"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/beatspermeasureTV"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BPMTV" />
    <EditText
        android:id="@+id/beatspermeasureET"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/beatspermeasureET"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/beatspermeasureTV"
        app:layout_constraintTop_toBottomOf="@+id/BPMET" />

    <Button
        android:id="@+id/playBT"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/playBT"

        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/notesrestsBT"
        app:layout_constraintTop_toBottomOf="@+id/staffIV" />

    <ImageView
        android:id="@+id/noteoneIV"
        android:layout_width="26dp"
        android:layout_height="37dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/staffIV"
        app:layout_constraintTop_toTopOf="@+id/staffIV"
        app:srcCompat="@drawable/wholenotesmall" />

    <ImageButton
        android:id="@+id/downarrowIB"
        android:layout_width="26dp"
        android:layout_height="23dp"
        android:layout_marginStart="68dp"
        app:layout_constraintStart_toStartOf="@+id/staffIV"
        app:layout_constraintTop_toBottomOf="@+id/noteoneIV"
        app:srcCompat="@drawable/downarrowsmall"
        android:background="@android:color/transparent"/>

    <ImageButton
        android:id="@+id/uparrowIB"
        android:layout_width="26dp"
        android:layout_height="23dp"
        android:layout_marginStart="68dp"
        android:rotation="180"
        app:layout_constraintBottom_toTopOf="@+id/noteoneIV"
        app:layout_constraintStart_toStartOf="@+id/staffIV"
        app:srcCompat="@drawable/downarrowsmall"
        android:background="@android:color/transparent"/>

    <ImageView
        android:id="@+id/notetwoIV"
        android:layout_width="26dp"
        android:layout_height="37dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/staffIV"
        app:layout_constraintTop_toTopOf="@+id/staffIV"
        app:srcCompat="@drawable/halfnotesmall" />

    <ImageView
        android:id="@+id/notethreeIV"
        android:layout_width="26dp"
        android:layout_height="37dp"
        android:layout_marginStart="185dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/staffIV"
        app:layout_constraintTop_toTopOf="@+id/staffIV"
        app:srcCompat="@drawable/wholenotesmall" />

    <ImageView
        android:id="@+id/notefourIV"
        android:layout_width="26dp"
        android:layout_height="37dp"
        android:layout_marginStart="245dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/staffIV"
        app:layout_constraintTop_toTopOf="@+id/staffIV"
        app:srcCompat="@drawable/wholenotesmall" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="224dp"
        android:layout_height="35dp"
        android:layout_marginStart="1dp"
        app:layout_constraintStart_toEndOf="@+id/keyTV"
        app:layout_constraintTop_toBottomOf="@+id/staffIV"
        android:entries ="@array/spinnerItems"/>


</androidx.constraintlayout.widget.ConstraintLayout>